# dmnautilus

./: Makefile  README.md  configure  configure.ac  dmnautilus.c  dmnautilus.par  dmnautilus.t  dmnautilus.xml  t_dmnautilus.c
examples/notebooks/abell1775/: 00b dmnautilus.ipynb
examples/notebooks/abell665/: 02_dmnautilus_original.ipynb
src/: Makefile.am  Makefile.cxc  Makefile.in  dmnautilus.c  dmnautilus.par  t_dmnautilus.c
test/: Makefile.am  Makefile.in  dmnautilus.t
test/save_data/dmnautilus/: new_four.fits  new_four.fits.map  new_one.fits  new_one.fits.map  new_rotated.fits  new_rotated.fits.map  new_three.fits  new_three.fits.map  new_two.fits  new_two.fits.map  new_with_subspace.fits  new_with_subspace.fits.map
wrapper/: Makefile.am  Makefile.in
